===========================
Isotope eCommerce Changelog
===========================

Version 0.2.0
------------------------------
- Added: Product weight field and weight units
- Added: Shipping module for price based on product weight
- Added: New payment module for ePay (www.epay.eu)
- Added: Hooks for altering product before output
- Added: Payment and and shipping module can now provide additional info for each order (trough a button/operation)

Version 0.1.1 stable (2010-??-??)
------------------------------
- Fixed: Countries and shipping methods for payment modules are no longer mandatory
- Fixed: Subdivisions for shipping modules should now work correctly
- Fixed: Tax was not applied to flat price shipping
- Fixed: Final price for paypal standard payment module did not include taxes
- Fixed: Latest order did not appear in order history module
- Fixed: Checkout condition form did show invisible fields
- Fixed old image size message (Ticket #119)
- Fixed a bug with minimum/maximum order total calculation.

Version 0.1.0 stable (2010-05-23)
------------------------------
- Initial stable release